--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,35 @@
 <p>home works!</p>
+
+<div class="container">
+    <div id="cam">Cam</div>
+    <video id="video" autoplay></video>
+    <script src="camera.js"></script>
+</div>
+<style>
+
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    .container{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+    #cam {
+        padding: 10px;
+        font-size: 25px;
+        position: absolute;
+        z-index: 99999;
+        background-color: rgba(240, 248, 255, 0.743);
+    }
+
+    video {
+        max-width: 500px;
+        width: 100%;
+        min-height: 100svh;
+        background: transparent;
+    }
+</style>
